fix hyphenation and overfull lines in classes/imageprocessing and classes/improveimage use uniform usage of \code to highlight class and method names

--- a/doc/hyphenation.tex
+++ b/doc/hyphenation.tex
@@ -2,12 +2,17 @@
   ab-ge-schwächt
   an-sons-ten
   Ä-qui-va-lenz-en
+  auf-zu-wer-ten
   aus-schlie-ßen
   be-stimmt
   be-trach-te-ten
   Bild-aus-schnitt
   ent-spre-chen-de
+  er-zeugt
   Farb-ko-die-rung
+  ge-dreht
+  Hel-lig-keits-un-ter-schied
+  Hel-lig-keits-zu-wei-sung
   Ini-ti-ali-sie-rung
   Kan-ten-ope-ra-tor
   ma-the-ma-tisch-en
