shadows evaluation added

--- a/doc/tex/evaluation/ip.tex
+++ b/doc/tex/evaluation/ip.tex
@@ -15,7 +15,5 @@ Da das Schärfen von Bildern immer mit der Verstärkung von ungewollten Eigensch
 
 
 \subsection*{Schatten}
-\todo{Beschreibung fehlt noch}
-
-
+1D Strichcodes werden nach der Schattenentfernung sehr gut erkannt, allerdings verhalten sich QR-Codes nicht so vorteilhaft. Sie lassen sich durch die Schattenerkennung meist nicht besser Erkennung, können aber durch simple Aufhellung des Bildes meist gelesen werden, solange der Kontrast ausreichend erhalten bleibt.
 
