--- a/doc/tex/evaluation/zxing/qr.tex
+++ b/doc/tex/evaluation/zxing/qr.tex
@@ -52,4 +52,12 @@ Die allgemeine Dunkelheit des Bildes, durch die der Kontrast sinkt, scheint kaum
 \end{figure}
 
 % schatten
-\todo{SCHATTEN}
+Leicht schattige Bilder, bis 60\% Abdunklung im Schatten, können bei jeglicher Überdeckungsrate gut erkannt werden. Ab 80\% Abdunklung sind allerdings kaum noch Codes dekodierbar, es sei denn, der Schattenbereich ist durch die Fehlerkorrektur des Codes ausgleichbar. Sich überlagernde Schatten, sind als jeweils einzelne Schatten anzusehen und können auch als solche bearbeitet werden.
+\begin{figure}[H]
+  \centering
+  \includegraphics[height=4cm]{img/QR/shade_03_60+60.jpg}
+  \includegraphics[height=4cm]{img/QR/shade_03_2x60.jpg}
+  \includegraphics[height=4cm]{img/QR/shade_03_60+s40.jpg}
+  \caption{Schatten, die jeweils um 60\% abdunkeln}
+  \label{fig:qrdark}
+\end{figure}
