--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -187,3 +187,43 @@
   url       = {www.cs.purdue.edu/research/technical_reports/1983/TR\%2083-463.pdf}
 }
 
+@book{Toennies2005,
+  title     = {Grundlagen der Bildverarbeitung},
+  author    = {Klaus D. Tönnies},
+  publisher = {Pearson},
+  year      = {2005},
+  isbn      = {978-3-8273-7155-4}
+}
+
+@book{Pratt1991,
+  title     = {Digital Image Processing},
+  author    = {William K. Pratt},
+  publisher = {John Wiley and Sons, inc},
+  year      = {1991},
+  isbn      = {0-471-85766-1}
+}
+
+@book{Allais2006,
+  title     = {AIDC Memoirs},
+  author    = {David C. Allais},
+  publisher = {PathGuide Technologies, Inc.},
+  year      = {2006},
+  isbn      = {425-438-2899}
+}
+
+@misc{DensoWave2010,
+  author    = {DensoWave},
+  url       = {http://www.qrcode.com/en/index.html}
+}
+
+@misc{Cometitrack2011,
+  author    = {Cometitrack},
+  url       = {http://www.competitrack.com/nhpub/2dcodes/index.html}
+}
+@book{Furht2011,
+  title     = {Handbook of Augmented Reality},
+  author    = {Borko Furht},
+  publisher = {Springer},
+  year      = {2011},
+  isbn      = {978-1461400639}
+}
