--- a/doc/tex/evaluation/zxing/ean13.tex
+++ b/doc/tex/evaluation/zxing/ean13.tex
@@ -60,5 +60,5 @@ Da Schatten sich stark auf den Kontrast auswirken, können nur Strichcodes geles
   \includegraphics[height=3cm]{img/EAN13/shade_01_20+50.jpg}
   \includegraphics[height=3cm]{img/EAN13/shade_01_20+s30.jpg}
   \caption{Schatten die jeweils um 20\% abdunkeln}
-  \label{fig:eandark}
+  \label{fig:eanshade}
 \end{figure}
