--- a/doc/tex/evaluation/zxing/qr.tex
+++ b/doc/tex/evaluation/zxing/qr.tex
@@ -59,5 +59,5 @@ Leicht schattige Bilder, bis 60\% Abdunklung im Schatten, können bei jeglicher 
   \includegraphics[height=4cm]{img/QR/shade_03_2x60.jpg}
   \includegraphics[height=4cm]{img/QR/shade_03_60+s40.jpg}
   \caption{Schatten, die jeweils um 60\% abdunkeln}
-  \label{fig:qrdark}
+  \label{fig:qrshade}
 \end{figure}
